compilateurDeca/src/test/deca/context/invalid/objet/declarations/double_def_method.deca
// Description:
//    Test de contexte : Méthode déclarée deux fois dans la même classe
//
// Resultats:
//    Erreur contextuelle : Nom de méthode déjà déclaré dans la classe
//
// Historique:
//    cree le 15/01/2026

class A {
    void m() { }
    void m() { }
}
